forgot about this

--- a/vignettes/vignette_from_scRepertoire.Rmd
+++ b/vignettes/vignette_from_scRepertoire.Rmd
@@ -87,8 +87,7 @@ contig.list <- loadContigs(input = demo_airr, format = "AIRR")
 combined.TCR <- combineTCR(contig.list,
     removeNA = TRUE,
     removeMulti = FALSE,
-    filterMulti = TRUE,
-    filterNonproductive = TRUE,
+    filterMulti = TRUE
 )
 ```
 
