--- a/vignettes/vignette_reproduce_original.rmd
+++ b/vignettes/vignette_reproduce_original.rmd
@@ -21,17 +21,17 @@ In this vignette, we will demonstrate how to perform TCR trajectory analysis sta
 ## Load the required libraries
 
 Loading `destiny` is required for the diffusion map computation which we will piggyback on for the trajectory inference. 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
+```{r, message=FALSE, warning=FALSE, include=FALSE}
 library(destiny)
 # there's a known 'error' with loading a dependency of destiny, pillar:
 # https://github.com/r-lib/pillar/pull/668
 ```
 
 We will also load `scRepertoire` and `scater` for the analysis.
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
+```{r, message=FALSE, warning=FALSE}
+library(dandelionR)
 library(scRepertoire)
 library(scater)
-library(dandelionR)
 ```
 
 ## Load data
