--- a/vignettes/vignette_from_scRepertoire.Rmd
+++ b/vignettes/vignette_from_scRepertoire.Rmd
@@ -178,6 +178,7 @@ root <- which.max(pca[1, ])
 
 ### Construct diffusion map
 ```{r, warning = FALSE}
+library(destiny)
 # Run diffusion map on the PCA
 dm <- DiffusionMap(t(pca), n_pcs = 10, n_eigs = 10)
 ```
