--- a/vignettes/vignette_from_scRepertoire.Rmd
+++ b/vignettes/vignette_from_scRepertoire.Rmd
@@ -43,8 +43,6 @@ devtools::install_github("tuonglab/dandelionR", dependencies = TRUE)
 
 In a standard analysis workflow in R, users probably choose to read in their VDJ data with [scRepertoire](https://github.com/ncborcherding/scRepertoire). In this vignette, we will demonstrate how to perform TCR trajectory analysis starting from 'raw' data i.e. just a standard single-cell gene expression data (stored in `SingleCellExperiment`) and VDJ data (in AIRR format).
 
-## Installation
-
 Install `scRepertoire` if you haven't already.
 ```{r, eval = FALSE}
 if (!requireNamespace("scRepertoire", quietly = TRUE)) { # only for the tutorial
@@ -54,8 +52,17 @@ if (!requireNamespace("scRepertoire", quietly = TRUE)) { # only for the tutorial
 devtools::install_github("ncborcherding/scRepertoire")
 ```
 
+## Usage
+
 ### Load the required libraries
-```{r}
+
+```{r, message=FALSE, warning=FALSE, include=FALSE}
+library(destiny)
+# there's a known 'error' with loading a dependency of destiny, pillar:
+# https://github.com/r-lib/pillar/pull/668
+```
+
+```{r, message=FALSE, warning=FALSE}
 library(dandelionR)
 library(scRepertoire)
 library(scater)
