--- a/vignettes/vignette_reproduce_original.rmd
+++ b/vignettes/vignette_reproduce_original.rmd
@@ -18,10 +18,18 @@ library(BiocStyle)
 
 In this vignette, we will demonstrate how to perform TCR trajectory analysis starting from data that has already been processed by `dandelion` in python. This is to demonstrate that the original method/results in the `dandelion` paper can be reproduced.
 
-## Usage
+## Load the required libraries
 
-```{r, message = FALSE, warning = FALSE}
+```{r, message=FALSE, warning=FALSE, include=FALSE}
+library(destiny)
+# there's a known 'error' with loading a dependency of destiny, pillar:
+# https://github.com/r-lib/pillar/pull/668
+```
+
+We will also load `scRepertoire` and `scater` for the analysis.
+```{r, message=FALSE, warning=FALSE}
 library(dandelionR)
+library(scRepertoire)
 library(scater)
 ```
 
