--- a/vignettes/vignette_from_scRepertoire.Rmd
+++ b/vignettes/vignette_from_scRepertoire.Rmd
@@ -169,8 +169,8 @@ In the original `dandelion` python package, the trajectory inference is done usi
 ```{r}
 # extract the PCA matrix
 pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
-# define the CD8 terminal cell as the top-most cell and CD4 terminal cell as the bottom-most cell
-branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
+# define the CD8 terminal cell as the bottom-most cell and CD4 terminal cell as the top-most cell
+branch.tips <- c(which.min(pca[2, ]), which.max(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the right-most cell
 root <- which.max(pca[1, ])
