--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -144,7 +144,10 @@ We will use miloR to create the pseudobulks based on the gene expression data. T
 library(miloR)
 milo_object <- Milo(sce)
 milo_object <- buildGraph(milo_object, k = 30, d = 20, reduced.dim = "X_scvi")
-milo_object <- makeNhoods(milo_object, reduced_dims = "X_scvi", d = 20, prop = 0.3)
+milo_object <- makeNhoods(milo_object,
+    reduced_dims = "X_scvi", d = 20,
+    prop = 0.3
+)
 ```
 ### Construct UMAP on milo neighbor graph
 
@@ -154,14 +157,20 @@ We can visualise this milo object using UMAP.
 milo_object <- miloUmap(milo_object, n_neighbors = 30)
 ```
 ```{r}
-plotUMAP(milo_object, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
+plotUMAP(milo_object,
+    color_by = "anno_lvl_2_final_clean",
+    dimred = "UMAP_knngraph"
+)
 ```
 
 ## Construct pseudobulked VDJ feature space
 
 Next, we will construct the pseudobulked VDJ feature space using the neighbourhood graph constructed above. We will also run PCA on the pseudobulked VDJ feature space.
 ```{r}
-pb.milo <- vdjPseudobulk(milo_object, mode_option = "abT", col_to_take = "anno_lvl_2_final_clean")
+pb.milo <- vdjPseudobulk(milo_object,
+    mode_option = "abT",
+    col_to_take = "anno_lvl_2_final_clean"
+)
 ```
 
 Inspect the newly created `pb.milo` object.
@@ -183,7 +192,8 @@ In the original `dandelion` python package, the trajectory inference is done usi
 ```{r}
 # extract the PCA matrix
 pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
-# define the CD8 terminal cell as the top-most cell and CD4 terminal cell as the bottom-most cell
+# define the CD8 terminal cell as the top-most cell and CD4 terminal cell as
+# the bottom-most cell
 branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the right-most cell
@@ -209,7 +219,8 @@ DPTroot <- paste0("DPT", root)
 pb.milo$pseudotime <- dif.pse[[DPTroot]]
 # set the colours for pseudotime
 pal <- colorRampPalette(rev((RColorBrewer::brewer.pal(9, "RdYlBu"))))(255)
-plotPCA(pb.milo, color_by = "pseudotime") + scale_colour_gradientn(colours = pal)
+plotPCA(pb.milo, color_by = "pseudotime") +
+    scale_colour_gradientn(colours = pal)
 ```
 
 ### Markov chain construction on the pseudobulk VDJ feature space
@@ -250,9 +261,12 @@ cdata <- projectPseudotimeToCell(milo_object, pb.milo, branch.tips)
 ### Visualise the trajectory data on a per cell basis
 ```{r, message=FALSE}
 plotUMAP(cdata, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
-plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata, color_by = "CD4+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") +
+    scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD4+T", dimred = "UMAP_knngraph") +
+    scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") +
+    scale_color_gradientn(colors = pal)
 ```
 
 And that's it! We have successfully inferred the trajectory of the T-cells in this dataset!
