--- a/vignettes/vignette_reproduce_original.rmd
+++ b/vignettes/vignette_reproduce_original.rmd
@@ -52,7 +52,11 @@ Here, we also need to specify the `allowed_chain_status` to keep to the relevant
 ```{r, warning = FALSE}
 sce_vdj <- setupVdjPseudobulk(sce_vdj,
     already.productive = FALSE,
-    allowed_chain_status = c("Single pair", "Extra pair", "Extra pair-exception", "Orphan VDJ", "Orphan VDJ-exception")
+    allowed_chain_status = c(
+        "Single pair", "Extra pair",
+        "Extra pair-exception", "Orphan VDJ",
+        "Orphan VDJ-exception"
+    )
 )
 ```
 
@@ -77,7 +81,10 @@ We can visualise this milo object using UMAP.
 milo_object <- miloUmap(milo_object)
 ```
 ```{r}
-plotUMAP(milo_object, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
+plotUMAP(milo_object,
+    color_by = "anno_lvl_2_final_clean",
+    dimred = "UMAP_knngraph"
+)
 ```
 
 ## Construct pseudobulked VDJ feature space
@@ -105,7 +112,8 @@ library(SingleCellExperiment)
 
 # extract the PCA matrix
 pca <- t(as.matrix(reducedDim(pb.milo, type = "PCA")))
-# define the CD8 terminal cell as the top-most cell and CD4 terminal cell as the bottom-most cell
+# define the CD8 terminal cell as the top-most cell and CD4 terminal cell as
+# the bottom-most cell
 branch.tips <- c(which.max(pca[2, ]), which.min(pca[2, ]))
 names(branch.tips) <- c("CD8+T", "CD4+T")
 # define the start of our trajectory as the right-most cell
@@ -131,7 +139,8 @@ DPTroot <- paste0("DPT", root)
 pb.milo$pseudotime <- dif.pse[[DPTroot]]
 # set the colours for pseudotime
 pal <- colorRampPalette(rev((RColorBrewer::brewer.pal(9, "RdYlBu"))))(255)
-plotPCA(pb.milo, color_by = "pseudotime") + scale_colour_gradientn(colours = pal)
+plotPCA(pb.milo, color_by = "pseudotime") +
+    scale_colour_gradientn(colours = pal)
 ```
 
 ### Markov chain construction on the pseudobulk VDJ feature space
@@ -166,9 +175,12 @@ cdata <- projectPseudotimeToCell(milo_object, pb.milo, branch.tips)
 ### Visualise the trajectory data on a per cell basis
 ```{r, message=FALSE}
 plotUMAP(cdata, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
-plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata, color_by = "CD4+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
-plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") + scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") +
+    scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD4+T", dimred = "UMAP_knngraph") +
+    scale_color_gradientn(colors = pal)
+plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") +
+    scale_color_gradientn(colors = pal)
 ```
 
 And that's it! We have successfully inferred the trajectory of the T-cells in this dataset!
