initial review changes (#57)
* first wave of review changes

* more updates

* nhoods giving me grief

* add verbose properly

* importFrom miloR nhoods<- isn't working???

* Update vdjPseudobulk.Rd

* add biocstyle?

* get rid of destiny import?

--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Single-cell Immune Repertoire Trajectory Analysis Starting From scRepertoire"
-output: rmarkdown::html_vignette
+output:
+  BiocStyle::html_document:
+    toc: true
+    toc_depth: 2
+    number_sections: true
 date: "`r Sys.Date()`"
 vignette: >
   %\VignetteIndexEntry{Single-cell Immune Repertoire Trajectory Analysis Starting From scRepertoire}
@@ -56,12 +60,6 @@ devtools::install_github("ncborcherding/scRepertoire")
 
 ### Load the required libraries
 
-```{r, message=FALSE, warning=FALSE, include=FALSE}
-library(destiny)
-# there's a known 'error' with loading a dependency of destiny, pillar:
-# https://github.com/r-lib/pillar/pull/668
-```
-
 ```{r, message=FALSE, warning=FALSE}
 library(dandelionR)
 library(scRepertoire)
@@ -72,6 +70,9 @@ library(scater)
 Due to size limitations of the package, we have provided a very trimmed down version of the demo data to ~2000 cells. The full dataset can be found here accordingly: GEX - https://developmental.cellatlas.io/fetal-immune (Lymphoid Cells) and VDJ - https://github.com/zktuong/dandelion-demo-files/tree/master/dandelion_manuscript/data/dandelion-remap
 
 Check out the other vignette for an example dataset that starts from the original `dandelion` output associated with the original [manuscript](https://www.nature.com/articles/s41587-023-01734-7).
+```{r, include=FALSE}
+vignette("vignette_reproduce_original")
+```
 
 ```{r}
 data(demo_sce)
@@ -165,7 +166,7 @@ pb.milo <- vdjPseudobulk(milo_object, mode_option = "abT", col_to_take = "anno_l
 
 Inspect the newly created `pb.milo` object.
 ```{r}
-pb.milo 
+pb.milo
 ```
 
 We can compute and visualise the PCA of the pseudobulked VDJ feature space.
