--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "Single-cell Immune Repertoire Trajectory Analysis Starting From scRepertoire"
+title: "Single-cell Immune Repertoire Trajectory Analysis 
+Starting From scRepertoire"
 output:
   BiocStyle::html_document:
     toc: true
@@ -11,13 +12,11 @@ knitr:
     fig.align: 'left'
 date: "`r Sys.Date()`"
 vignette: >
-  %\VignetteIndexEntry{Single-cell Immune Repertoire Trajectory Analysis Starting From scRepertoire}
+  %\VignetteIndexEntry{Single-cell Immune Repertoire Trajectory Analysis 
+  Starting From scRepertoire}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-[![codecov](https://codecov.io/gh/tuonglab/dandelionR/graph/badge.svg?token=dd1bBTW48K)](https://codecov.io/gh/tuonglab/dandelionR)
-[![R-CMD-check](https://github.com/tuonglab/dandelionR/actions/workflows/R-CMD-check.yml/badge.svg)](https://github.com/tuonglab/dandelionR/actions/workflows/R-CMD-check.yml)
-[![vignette](https://github.com/tuonglab/dandelionR/actions/workflows/vignette.yml/badge.svg)](https://github.com/tuonglab/dandelionR/actions/workflows/vignette.yml)
 ```{r, echo=FALSE, results="hide", message=FALSE}
 knitr::opts_chunk$set(error = FALSE, message = FALSE, warning = FALSE)
 library(BiocStyle)
@@ -27,11 +26,18 @@ library(BiocStyle)
 
 Welcome to `dandelionR`!
 
-`dandelionR` is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation in [dandelion](https://www.github.com/zktuong/dandelion). 
+`dandelionR` is an R package for performing single-cell immune repertoire
+trajectory analysis,  based on the original python implementation in 
+[dandelion](https://www.github.com/zktuong/dandelion). 
 
-It provides all the necessary tools to interface with [scRepertoire](https://github.com/ncborcherding/scRepertoire) and a custom implementation of absorbing markov chain for pseudotime inference, inspired based on the [palantir](https://github.com/dpeerlab/Palantir) python package.
+It provides all the necessary tools to interface with
+[scRepertoire](https://github.com/ncborcherding/scRepertoire) 
+and a custom implementation of absorbing markov chain for pseudotime inference, 
+inspired based on the [palantir](https://github.com/dpeerlab/Palantir) python 
+package.
 
-This is a work in progress, so please feel free to open an issue if you encounter any problems or have any suggestions for improvement.
+This is a work in progress, so please feel free to open an issue if you 
+encounter any problems or have any suggestions for improvement.
 
 ## Installation
 
@@ -49,11 +55,16 @@ if (!requireNamespace("scater", quietly = TRUE)) { # only for the tutorial
 devtools::install_github("tuonglab/dandelionR", dependencies = TRUE)
 ```
 
-In a standard analysis workflow in R, users probably choose to read in their VDJ data with [scRepertoire](https://github.com/ncborcherding/scRepertoire). In this vignette, we will demonstrate how to perform TCR trajectory analysis starting from 'raw' data i.e. just a standard single-cell gene expression data (stored in `SingleCellExperiment`) and VDJ data (in AIRR format).
+In a standard analysis workflow in R, users probably choose to read in their 
+VDJ data with [scRepertoire](https://github.com/ncborcherding/scRepertoire). 
+In this vignette, we will demonstrate how to perform TCR trajectory analysis 
+starting from 'raw' data i.e. just a standard single-cell gene expression data 
+(stored in `SingleCellExperiment`) and VDJ data (in AIRR format).
 
 Install `scRepertoire` if you haven't already.
 ```{r, eval = FALSE}
-if (!requireNamespace("scRepertoire", quietly = TRUE)) { # only for the tutorial
+if (!requireNamespace("scRepertoire", quietly = TRUE)) {
+    # only for the tutorial
     BiocManager::install("scRepertoire")
 }
 # or
@@ -71,9 +82,17 @@ library(scater)
 ```
 
 ### Load the demo data
-Due to size limitations of the package, we have provided a very trimmed down version of the demo data to ~2000 cells. The full dataset can be found here accordingly: GEX - https://developmental.cellatlas.io/fetal-immune (Lymphoid Cells) and VDJ - https://github.com/zktuong/dandelion-demo-files/tree/master/dandelion_manuscript/data/dandelion-remap
+Due to size limitations of the package, we have provided a very trimmed down 
+version of the demo data to ~2000 cells. The full dataset can be found here 
+accordingly: 
+GEX - https://developmental.cellatlas.io/fetal-immune 
+(Lymphoid Cells) 
+and VDJ - https://github.com/zktuong/dandelion-demo-files/ 
+is in the dandelion_manuscript/data/dandelion-remap folder.
 
-Check out the other vignette for an example dataset that starts from the original `dandelion` output associated with the original [manuscript](https://www.nature.com/articles/s41587-023-01734-7).
+Check out the other vignette for an example dataset that starts from the 
+original `dandelion` output associated with the original 
+[manuscript](https://www.nature.com/articles/s41587-023-01734-7).
 ```{r, include=FALSE}
 vignette("vignette_reproduce_original")
 ```
@@ -88,13 +107,11 @@ We will set the seed so that the plots and results are consistent.
 set.seed(123)
 ```
 ### Use `scRepertoire` to load the VDJ data
-For the trajectory analysis work here, we are focusing on the main productive TCR chains. Therefore we will flag `filterMulti = TRUE`, which will keep the selection of the 2 corresponding chains with the highest expression for a single barcode. For more details, refer to `scRepertoire`'s [documentation](https://www.borch.dev/uploads/screpertoire/reference/combinetcr).
-
-::: {.note}
-**Note:** There is a known issue with `combineTCR` shuffling the order of the `SingleCellExperiment` `colData` and this may not have been updated in the latest version of `scRepertoire` on Bioconductor (release 3.20). If you encounter this issue, please install the development version of `scRepertoire` from GitHub:
-
-`devtools::install_github("ncborcherding/scRepertoire")`
-:::
+For the trajectory analysis work here, we are focusing on the main productive 
+TCR chains. Therefore we will flag `filterMulti = TRUE`, which will keep the 
+selection of the 2 corresponding chains with the highest expression for a 
+single barcode. For more details, refer to `scRepertoire`'s 
+[docs](https://www.borch.dev/uploads/screpertoire/reference/combinetcr).
 
 ```{r}
 contig.list <- loadContigs(input = demo_airr, format = "AIRR")
@@ -108,19 +125,28 @@ combined.TCR <- combineTCR(contig.list,
 ```
 
 ### Merging VDJ data with gene expression data
-Next we will combine the gene expression data with the VDJ data to create a `SingleCellExperiment` object.
+Next we will combine the gene expression data with the VDJ data to create a 
+`SingleCellExperiment` object.
 ```{r}
 sce <- combineExpression(combined.TCR, demo_sce)
 ```
 
 ### Initiate `dandelionR` workflow
-Here, the data is ready to be used for the pseudobulk and trajectory analysis workflow in `dandelionR`.
+Here, the data is ready to be used for the pseudobulk and trajectory analysis 
+workflow in `dandelionR`.
 
-Because this is a alpha-beta TCR data, we will set the `mode_option` to "abT". This will append `abT` to the relevant columns holding the VDJ gene information. If you are going to try other types of VDJ data e.g. BCR, you should set `mode_option` to "B" instead. And this argument should be consistently set with the `vdjPseudobulk` function later.
+Because this is a alpha-beta TCR data, we will set the `mode_option` to "abT". 
+This will append `abT` to the relevant columns holding the VDJ gene 
+information. If you are going to try other types of VDJ data e.g. BCR, you 
+should set `mode_option` to "B" instead. And this argument should be 
+consistently set with the `vdjPseudobulk` function later.
 
-Since the TCR data is already filtered for productive chains in `combineTCR`, we will set `already.productive = TRUE` and can keep `allowed_chain_status` as `NULL`.
+Since the TCR data is already filtered for productive chains in `combineTCR`, 
+we will set `already.productive = TRUE` and can keep `allowed_chain_status` 
+as `NULL`.
 
-We will also subset the data to only include the main T-cell types: CD8+T, CD4+T, ABT(ENTRY), DP(P)_T, DP(Q)_T.
+We will also subset the data to only include the main T-cell types: CD8+T, 
+CD4+T, ABT(ENTRY), DP(P)_T, DP(Q)_T.
 ```{r}
 sce <- setupVdjPseudobulk(sce,
     mode_option = "abT",
@@ -130,7 +156,9 @@ sce <- setupVdjPseudobulk(sce,
 )
 ```
 
-The main output of this function is a `SingleCellExperiment` object with the relevant VDJ information appended to the `colData`, particularly the columns with the `_main` suffix e.g. `v_call_abT_VJ_main`, `j_call_abT_VJ_main` etc.
+The main output of this function is a `SingleCellExperiment` object with the 
+relevant VDJ information appended to the `colData`, particularly the columns 
+with the `_main` suffix e.g. `v_call_abT_VJ_main`, `j_call_abT_VJ_main` etc.
 ```{r}
 head(colData(sce))
 ```
@@ -142,7 +170,9 @@ plotUMAP(sce, color_by = "anno_lvl_2_final_clean")
 
 
 ## Milo object and neighbourhood graph construction
-We will use miloR to create the pseudobulks based on the gene expression data. The goal is to construct a neighbourhood graph with many neighbors with which we can sample the representative neighbours to form the objects.
+We will use miloR to create the pseudobulks based on the gene expression data. 
+The goal is to construct a neighbourhood graph with many neighbors with which 
+we can sample the representative neighbours to form the objects.
 
 ```{r, warning = FALSE}
 library(miloR)
@@ -169,7 +199,9 @@ plotUMAP(milo_object,
 
 ## Construct pseudobulked VDJ feature space
 
-Next, we will construct the pseudobulked VDJ feature space using the neighbourhood graph constructed above. We will also run PCA on the pseudobulked VDJ feature space.
+Next, we will construct the pseudobulked VDJ feature space using the 
+neighbourhood graph constructed above. We will also run PCA on the 
+pseudobulked VDJ feature space.
 ```{r}
 pb.milo <- vdjPseudobulk(milo_object,
     mode_option = "abT",
@@ -190,7 +222,10 @@ plotPCA(pb.milo, color_by = "anno_lvl_2_final_clean")
 
 ## TCR trajectory inference using Absorbing Markov Chain
 
-In the original `dandelion` python package, the trajectory inference is done using the `palantir` package. Here, we implement the absorbing markov chain approach in dandelionR to infer the trajectory, leveraging on `destiny` for diffusion map computation.
+In the original `dandelion` python package, the trajectory inference is done 
+using the `palantir` package. Here, we implement the absorbing markov chain 
+approach in dandelionR to infer the trajectory, leveraging on `destiny` for 
+diffusion map computation.
 
 ### Define root and branch tips
 ```{r}
@@ -228,7 +263,9 @@ plotPCA(pb.milo, color_by = "pseudotime") +
 ```
 
 ### Markov chain construction on the pseudobulk VDJ feature space
-This step will compute the Markov chain probabilities on the pseudobulk VDJ feature space. It will return the branch probabilities in the `colData` and the column name corresponds to the branch tips defined earlier.
+This step will compute the Markov chain probabilities on the pseudobulk VDJ 
+feature space. It will return the branch probabilities in the `colData` and 
+the column name corresponds to the branch tips defined earlier.
 ```{r}
 pb.milo <- markovProbability(
     milo = pb.milo,
@@ -247,7 +284,8 @@ head(colData(pb.milo))
 
 ### Visualising branch probabilities
 
-With the Markov chain probabilities computed, we can visualise the branch probabilities towards CD4+ or CD8+ T-cell fate on the PCA plot.
+With the Markov chain probabilities computed, we can visualise the branch 
+probabilities towards CD4+ or CD8+ T-cell fate on the PCA plot.
 ```{r, message=FALSE}
 plotPCA(pb.milo, color_by = "CD8+T") + scale_color_gradientn(colors = pal)
 plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
@@ -255,7 +293,12 @@ plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
 
 ## Transfer
 
-The next step is to project the pseudotime and the branch probability information from the pseudobulks back to each cell in the dataset. If the cell do not belong to any of the pseudobulk, it will be removed. If a cell belongs to multiple pseudobulk samples, its value should be calculated as a weighted average of the corresponding values from each pseudobulk, where each weight is inverse of the size of the pseudobulk.
+The next step is to project the pseudotime and the branch probability 
+information from the pseudobulks back to each cell in the dataset. If the cell 
+do not belong to any of the pseudobulk, it will be removed. If a cell belongs 
+to multiple pseudobulk samples, its value should be calculated as a weighted 
+average of the corresponding values from each pseudobulk, where each weight 
+is inverse of the size of the pseudobulk.
 
 ### Project pseudobulk data to each cell
 ```{r}
@@ -273,7 +316,8 @@ plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") +
     scale_color_gradientn(colors = pal)
 ```
 
-And that's it! We have successfully inferred the trajectory of the T-cells in this dataset!
+And that's it! We have successfully inferred the trajectory of the T-cells in 
+this dataset!
 
 ## Session info
 
