--- a/vignettes/vignette_reproduce_original.rmd
+++ b/vignettes/vignette_reproduce_original.rmd
@@ -15,16 +15,16 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-[![codecov](https://codecov.io/gh/tuonglab/dandelionR/graph/badge.svg?token=dd1bBTW48K)](https://codecov.io/gh/tuonglab/dandelionR)
-[![R-CMD-check](https://github.com/tuonglab/dandelionR/actions/workflows/R-CMD-check.yml/badge.svg)](https://github.com/tuonglab/dandelionR/actions/workflows/R-CMD-check.yml)
-[![vignette](https://github.com/tuonglab/dandelionR/actions/workflows/vignette.yml/badge.svg)](https://github.com/tuonglab/dandelionR/actions/workflows/vignette.yml)
 
 ```{r, echo=FALSE, results="hide", message=FALSE}
 knitr::opts_chunk$set(error = FALSE, message = FALSE, warning = FALSE)
 library(BiocStyle)
 ```
 
-In this vignette, we will demonstrate how to perform TCR trajectory analysis starting from data that has already been processed by `dandelion` in python. This is to demonstrate that the original method/results in the `dandelion` paper can be reproduced.
+In this vignette, we will demonstrate how to perform TCR trajectory analysis 
+starting from data that has already been processed by `dandelion` in python. 
+This is to demonstrate that the original method/results in the `dandelion` 
+paper can be reproduced.
 
 ## Load the required libraries
 
@@ -36,7 +36,12 @@ library(scater)
 ```
 
 ## Load data
-First, we will load the demo data. This is a down-sampled dataset from the [Suo et al 2024 Nature Biotechnology](https://www.nature.com/articles/s41587-023-01734-7) paper. It contains 10,000 cells with the TCR information and the dimensionality reduced data (scVI) that we need for this tutorial. The gene expression matrix is not required for this tutorial so it is not included in the demo data. We will show in a separate tutorial how to start with data from `scRepertoire`.
+First, we will load the demo data. This is a down-sampled dataset from the 
+[Suo et al 2024](https://www.nature.com/articles/s41587-023-01734-7) 
+paper. It contains 10,000 cells with the TCR information and the dimensionality 
+reduced data (scVI) that we need for this tutorial. The gene expression matrix 
+is not required for this tutorial so it is not included in the demo data. We 
+will show in a separate tutorial how to start with data from `scRepertoire`.
 ```{r, warning = FALSE}
 data(sce_vdj)
 ```
@@ -47,11 +52,21 @@ set.seed(100)
 
 ## Filter the data
 
-To begin, we will filter the data and extract the TCR information so that we can construct pseudobulks. 
+To begin, we will filter the data and extract the TCR information so that we 
+can construct pseudobulks. 
 
-Because the `colData` of this single-cell object is populated with the TCR information from `dandelion` in python (through this method: `dandelion` -> `anndata` -> `anndata2ri`, which essentially converts an `AnnData` object in python to `SingleCellExperiment` in R), we can directly use the `setupVdjPseudobulk` function to extract the TCR information and construct the pseudobulks.
+Because the `colData` of this single-cell object is populated with the TCR 
+information from `dandelion` in python (through this method: `dandelion` -> 
+`anndata` -> `anndata2ri`, which essentially converts an `AnnData` object in 
+python to `SingleCellExperiment` in R), we can directly use the 
+`setupVdjPseudobulk` function to extract the TCR information and construct 
+the pseudobulks.
 
-Here, we also need to specify the `allowed_chain_status` to keep to the relevant contigs. Default for `allowed_chain_status` is `NULL`, which will keep all contigs. In the standard R workflow that starts from `scRepertoire`, we will assume that all the QC and filtering has already been handled by `scRepertoire`.
+Here, we also need to specify the `allowed_chain_status` to keep to the 
+relevant contigs. Default for `allowed_chain_status` is `NULL`, which will 
+keep all contigs. In the standard R workflow that starts from `scRepertoire`, 
+we will assume that all the QC and filtering has already been handled by 
+`scRepertoire`.
 
 ```{r, warning = FALSE}
 sce_vdj <- setupVdjPseudobulk(sce_vdj,
@@ -71,7 +86,9 @@ plotUMAP(sce_vdj, color_by = "anno_lvl_2_final_clean")
 
 ## Milo object and neighbourhood graph construction
 
-We will use miloR to create the pseudobulks based on the gene expression data. The goal is to construct a neighbourhood graph with many neighbors with which we can sample the representative neighbours to form the objects.
+We will use miloR to create the pseudobulks based on the gene expression data. 
+The goal is to construct a neighbourhood graph with many neighbors with which 
+we can sample the representative neighbours to form the objects.
 ```{r, warning = FALSE}
 library(miloR)
 traj_milo <- Milo(sce_vdj)
@@ -93,7 +110,9 @@ plotUMAP(milo_object,
 
 ## Construct pseudobulked VDJ feature space
 
-Next, we will construct the pseudobulked VDJ feature space using the neighbourhood graph constructed above. We will also run PCA on the pseudobulked VDJ feature space.
+Next, we will construct the pseudobulked VDJ feature space using the 
+neighbourhood graph constructed above. We will also run PCA on the 
+pseudobulked VDJ feature space.
 ```{r}
 pb.milo <- vdjPseudobulk(milo_object, col_to_take = "anno_lvl_2_final_clean")
 
@@ -107,7 +126,10 @@ plotPCA(pb.milo, color_by = "anno_lvl_2_final_clean")
 
 ## TCR trajectory inference using Absorbing Markov Chain
 
-In the original `dandelion` python package, the trajectory inference is done using the `palantir` package. Here, we implement the absorbing markov chain approach in dandelionR to infer the trajectory, leveraging on `destiny` for diffusion map computation.
+In the original `dandelion` python package, the trajectory inference is done 
+using the `palantir` package. Here, we implement the absorbing markov chain 
+approach in dandelionR to infer the trajectory, leveraging on `destiny` for 
+diffusion map computation.
 
 ### Define root and branch tips
 ```{r}
@@ -160,7 +182,8 @@ pb.milo <- markovProbability(
 
 ### Visualising branch probabilities
 
-With the Markov chain probabilities computed, we can visualise the branch probabilities towards CD4+ or CD8+ T-cell fate on the PCA plot.
+With the Markov chain probabilities computed, we can visualise the branch 
+probabilities towards CD4+ or CD8+ T-cell fate on the PCA plot.
 ```{r, message=FALSE}
 plotPCA(pb.milo, color_by = "CD8+T") + scale_color_gradientn(colors = pal)
 plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
@@ -168,7 +191,12 @@ plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
 
 ## Transfer
 
-The next step is to project the pseudotime and the branch probability information from the pseudobulks back to each cell in the dataset. If the cell do not belong to any of the pseudobulk, it will be removed. If a cell belongs to multiple pseudobulk samples, its value should be calculated as a weighted average of the corresponding values from each pseudobulk, where each weight is inverse of the size of the pseudobulk.
+The next step is to project the pseudotime and the branch probability 
+information from the pseudobulks back to each cell in the dataset. If the cell 
+do not belong to any of the pseudobulk, it will be removed. If a cell belongs 
+to multiple pseudobulk samples, its value should be calculated as a weighted 
+average of the corresponding values from each pseudobulk, where each weight is 
+inverse of the size of the pseudobulk.
 
 ### Project pseudobulk data to each cell
 ```{r}
@@ -186,7 +214,8 @@ plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") +
     scale_color_gradientn(colors = pal)
 ```
 
-And that's it! We have successfully inferred the trajectory of the T-cells in this dataset!
+And that's it! We have successfully inferred the trajectory of the T-cells in 
+this dataset!
 
 ## Session info
 
