--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -9,6 +9,9 @@ knitr:
   opts_chunk:
     dev: 'png'
     fig.align: 'left'
+author:
+  - Jiawei Yu
+  - Kelvin Tuong
 date: "`r Sys.Date()`"
 vignette: >
   %\VignetteIndexEntry{Starting From scRepertoire}
