--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Starting From scRepertoire"
+title: "Single-cell immune repertoire trajectory analysis with dandelionR"
 output:
   BiocStyle::html_document:
     toc: true
@@ -11,7 +11,7 @@ knitr:
     fig.align: 'left'
 date: "`r Sys.Date()`"
 vignette: >
-  %\VignetteIndexEntry{Starting From scRepertoire}
+  %\VignetteIndexEntry{Single-cell immune repertoire trajectory analysis with dandelionR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -37,11 +37,11 @@ package.
 This is a work in progress, so please feel free to open an issue if you 
 encounter any problems or have any suggestions for improvement.
 
-## Installation
+# Installation
 
 You can install `dandelionR` with:
 
-### Bioconductor
+## Bioconductor
 ```{r, eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
@@ -49,7 +49,7 @@ if (!requireNamespace("BiocManager", quietly = TRUE)) {
 BiocManager::install("dandelionR")
 ```
 
-### Development version (GitHub)
+## Development version (GitHub)
 ```{r, eval = FALSE}
 if (!requireNamespace("devtools", quietly = TRUE)) {
     install.packages("devtools")
@@ -77,9 +77,9 @@ if (!requireNamespace("scRepertoire", quietly = TRUE)) {
 devtools::install_github("ncborcherding/scRepertoire")
 ```
 
-## Usage
+# Usage
 
-### Load the required libraries
+## Load the required libraries
 
 ```{r, message=FALSE, warning=FALSE}
 library(dandelionR)
@@ -87,7 +87,7 @@ library(scRepertoire)
 library(scater)
 ```
 
-### Load the demo data
+## Load the demo data
 Due to size limitations of the package, we have provided a very trimmed down 
 version of the demo data to ~2000 cells. The full dataset can be found here 
 accordingly: 
@@ -102,7 +102,7 @@ Check out the other vignette for an example dataset that starts from the
 original `dandelion` output associated with the original 
 [manuscript](https://www.nature.com/articles/s41587-023-01734-7).
 
-```{r, include=FALSE}
+```{r}
 vignette("vignette_reproduce_original")
 ```
 
@@ -115,7 +115,8 @@ We will set the seed so that the plots and results are consistent.
 ```{r}
 set.seed(123)
 ```
-### Use `scRepertoire` to load the VDJ data
+
+# Use `scRepertoire` to load the VDJ data
 For the trajectory analysis work here, we are focusing on the main productive 
 TCR chains. Therefore we will flag `filterMulti = TRUE`, which will keep the 
 selection of the 2 corresponding chains with the highest expression for a 
@@ -133,14 +134,14 @@ combined.TCR <- combineTCR(contig.list,
 )
 ```
 
-### Merging VDJ data with gene expression data
+## Merging VDJ data with gene expression data
 Next we will combine the gene expression data with the VDJ data to create a 
 `SingleCellExperiment` object.
 ```{r}
 sce <- combineExpression(combined.TCR, demo_sce)
 ```
 
-### Initiate `dandelionR` workflow
+# Initiate `dandelionR` workflow
 Here, the data is ready to be used for the pseudobulk and trajectory analysis 
 workflow in `dandelionR`.
 
@@ -192,7 +193,7 @@ milo_object <- makeNhoods(milo_object,
     prop = 0.3
 )
 ```
-### Construct UMAP on milo neighbor graph
+## Construct UMAP on milo neighbor graph
 
 We can visualise this milo object using UMAP.
 
@@ -206,7 +207,7 @@ plotUMAP(milo_object,
 )
 ```
 
-## Construct pseudobulked VDJ feature space
+# Construct pseudobulked VDJ feature space
 
 Next, we will construct the pseudobulked VDJ feature space using the 
 neighbourhood graph constructed above. We will also run PCA on the 
@@ -271,7 +272,7 @@ plotPCA(pb.milo, color_by = "pseudotime") +
     scale_colour_gradientn(colours = pal)
 ```
 
-### Markov chain construction on the pseudobulk VDJ feature space
+# Markov chain construction on the pseudobulk VDJ feature space
 This step will compute the Markov chain probabilities on the pseudobulk VDJ 
 feature space. It will return the branch probabilities in the `colData` and 
 the column name corresponds to the branch tips defined earlier.
@@ -291,7 +292,7 @@ Inspect the `pb.milo` object to see the newly added columns.
 head(colData(pb.milo))
 ```
 
-### Visualising branch probabilities
+# Visualising branch probabilities
 
 With the Markov chain probabilities computed, we can visualise the branch 
 probabilities towards CD4+ or CD8+ T-cell fate on the PCA plot.
@@ -300,7 +301,7 @@ plotPCA(pb.milo, color_by = "CD8+T") + scale_color_gradientn(colors = pal)
 plotPCA(pb.milo, color_by = "CD4+T") + scale_color_gradientn(colors = pal)
 ```
 
-## Transfer
+# Transfer
 
 The next step is to project the pseudotime and the branch probability 
 information from the pseudobulks back to each cell in the dataset. If the cell 
@@ -309,12 +310,12 @@ to multiple pseudobulk samples, its value should be calculated as a weighted
 average of the corresponding values from each pseudobulk, where each weight 
 is inverse of the size of the pseudobulk.
 
-### Project pseudobulk data to each cell
+## Project pseudobulk data to each cell
 ```{r}
 cdata <- projectPseudotimeToCell(milo_object, pb.milo, branch.tips)
 ```
 
-### Visualise the trajectory data on a per cell basis
+## Visualise the trajectory data on a per cell basis
 ```{r, message=FALSE}
 plotUMAP(cdata, color_by = "anno_lvl_2_final_clean", dimred = "UMAP_knngraph")
 plotUMAP(cdata, color_by = "pseudotime", dimred = "UMAP_knngraph") +
@@ -328,7 +329,7 @@ plotUMAP(cdata, color_by = "CD8+T", dimred = "UMAP_knngraph") +
 And that's it! We have successfully inferred the trajectory of the T-cells in 
 this dataset!
 
-## Session info
+# Session info
 
 ```{r, warning = FALSE}
 sessionInfo()
