--- a/vignettes/dandelionR.Rmd
+++ b/vignettes/dandelionR.Rmd
@@ -46,6 +46,9 @@ You can install `dandelionR` with:
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
 }
+# The following initializes usage of Bioc devel
+BiocManager::install(version="devel")
+
 BiocManager::install("dandelionR")
 ```
 
