change the input of DiffusionMap
The function DiffusionMap will perform PCA on the input data.
According to the documentation, the input is expected to be a gene expression matrix.
(though this doesn't really have much impact on the output.)

--- a/vignettes/vignette_reproduce_original.rmd
+++ b/vignettes/vignette_reproduce_original.rmd
@@ -150,7 +150,8 @@ root <- which.max(pca[1, ])
 ```{r, warning = FALSE}
 library(destiny)
 # Run diffusion map on the PCA
-dm <- DiffusionMap(t(pca), n_pcs = 50, n_eigs = 10)
+feature_space <- t(assay(pb.milo, "Feature_space"))
+dm <- DiffusionMap(as.matrix(feature_space), n_pcs = 50, n_eigs = 10)
 ```
 
 ### Compute diffussion pseudotime on diffusion map
